Bug 1329089 - yield to other transactions while reaching the max write attempts. r=mcmanus

MozReview-Commit-ID: KHlLbvab7HZ