netwerk/protocol/http/nsHttpConnection.cpp
@@ -1689,7 +1689,12 @@ nsHttpConnection::OnSocketWritable()
     uint32_t transactionBytes;
     bool again = true;
 
+    // Prevent STS thread from being blocked by single OnOutputStreamReady callback.
+    const uint32_t maxWriteAttempts = 128;
+    uint32_t writeAttempts = 0;
+
     do {
+        ++writeAttempts;
         rv = mSocketOutCondition = NS_OK;
         transactionBytes = 0;
 
@@ -1777,6 +1782,10 @@ nsHttpConnection::OnSocketWritable()
 
                 rv = ResumeRecv(); // start reading
             }
+            again = false;
+        } else if (writeAttempts >= maxWriteAttempts) {
+            LOG(("  yield for other transactions\n"));
+            rv = mSocketOut->AsyncWait(this, 0, 0, nullptr); // continue writing
             again = false;
         }
         // write more to the socket until error or end-of-request...
